--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@ body{
   background-color: rgb(76, 38, 241);
 }
 p {
-  color:rgba(129, 8, 8, 0.133);
+  color:rgb(250, 250, 250);
   }
   h2 {
 font-size: 35px;
+color: rgb(250, 250, 250);
   }
