--- a/style.css
+++ b/style.css
@@ -18,3 +18,18 @@ color: rgb(250, 250, 250);
   #history{
     color: yellow;
   }
+  .myfirstclass{
+    text-align: center;
+    font-size: 15px;
+    color:white;
+  }
+  .mysecondclass{
+    text-align: left;
+    font-size: 20px;
+    color: white;
+  }
+  .mythirdclass{
+text-align: right;
+font-size: 25px;
+color: white;
+}
